--- a/installer/assets/install
+++ b/installer/assets/install
@@ -1,5 +1,5 @@
 #!/bin/sh
-# Copyright 2012-2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License"). You
 # may not use this file except in compliance with the License. A copy of
